--- a/index.htm
+++ b/index.htm
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <title>Untitled 1</title>
+    <title>Appartement VAUBAN</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" id="metaViewport" content="user-scalable=no, initial-scale=1, width=device-width, viewport-fit=cover" data-tdv-general-scale="0.65"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <link rel="preload" href="locale/fr.txt?v=1717581307663" as="fetch" crossorigin="anonymous"/>
-	<link rel="preload" href="script.js?v=1717581307663" as="script"/>
-	<link rel="preload" href="media/panorama_EC17A84C_E7C1_1323_41EB_2D1EEBF6EDA7_0/2/0_0.jpg?v=1717581307663" as="image"/>
-	<link rel="preload" href="media/panorama_EC17A84C_E7C1_1323_41EB_2D1EEBF6EDA7_0/2/0_1.jpg?v=1717581307663" as="image"/>
-	<link rel="preload" href="media/panorama_EC17A84C_E7C1_1323_41EB_2D1EEBF6EDA7_0/2/0_2.jpg?v=1717581307663" as="image"/>
-	<link rel="preload" href="media/panorama_EC17A84C_E7C1_1323_41EB_2D1EEBF6EDA7_0/2/0_3.jpg?v=1717581307663" as="image"/>
-	<link rel="preload" href="media/panorama_EC17A84C_E7C1_1323_41EB_2D1EEBF6EDA7_0/2/0_4.jpg?v=1717581307663" as="image"/>
-	<link rel="preload" href="media/panorama_EC17A84C_E7C1_1323_41EB_2D1EEBF6EDA7_0/2/0_5.jpg?v=1717581307663" as="image"/>
-	<link rel="preload" href="media/panorama_EC17A84C_E7C1_1323_41EB_2D1EEBF6EDA7_0/2/0_6.jpg?v=1717581307663" as="image"/>
-	<link rel="preload" href="media/panorama_EC17A84C_E7C1_1323_41EB_2D1EEBF6EDA7_0/2/0_7.jpg?v=1717581307663" as="image"/>
-	<link rel="preload" href="media/panorama_EC17A84C_E7C1_1323_41EB_2D1EEBF6EDA7_0/2/0_8.jpg?v=1717581307663" as="image"/>
-	<link rel="preload" href="media/panorama_EC17A84C_E7C1_1323_41EB_2D1EEBF6EDA7_0/2/0_9.jpg?v=1717581307663" as="image"/>
-	<link rel="preload" href="media/panorama_EC17A84C_E7C1_1323_41EB_2D1EEBF6EDA7_0/2/0_10.jpg?v=1717581307663" as="image"/>
-	<link rel="preload" href="media/panorama_EC17A84C_E7C1_1323_41EB_2D1EEBF6EDA7_0/2/0_11.jpg?v=1717581307663" as="image"/>
+    <link rel="preload" href="locale/fr.txt?v=1717582746484" as="fetch" crossorigin="anonymous"/>
+	<link rel="preload" href="script.js?v=1717582746484" as="script"/>
+	<link rel="preload" href="media/panorama_EC17A84C_E7C1_1323_41EB_2D1EEBF6EDA7_0/2/0_0.jpg?v=1717582746484" as="image"/>
+	<link rel="preload" href="media/panorama_EC17A84C_E7C1_1323_41EB_2D1EEBF6EDA7_0/2/0_1.jpg?v=1717582746484" as="image"/>
+	<link rel="preload" href="media/panorama_EC17A84C_E7C1_1323_41EB_2D1EEBF6EDA7_0/2/0_2.jpg?v=1717582746484" as="image"/>
+	<link rel="preload" href="media/panorama_EC17A84C_E7C1_1323_41EB_2D1EEBF6EDA7_0/2/0_3.jpg?v=1717582746484" as="image"/>
+	<link rel="preload" href="media/panorama_EC17A84C_E7C1_1323_41EB_2D1EEBF6EDA7_0/2/0_4.jpg?v=1717582746484" as="image"/>
+	<link rel="preload" href="media/panorama_EC17A84C_E7C1_1323_41EB_2D1EEBF6EDA7_0/2/0_5.jpg?v=1717582746484" as="image"/>
+	<link rel="preload" href="media/panorama_EC17A84C_E7C1_1323_41EB_2D1EEBF6EDA7_0/2/0_6.jpg?v=1717582746484" as="image"/>
+	<link rel="preload" href="media/panorama_EC17A84C_E7C1_1323_41EB_2D1EEBF6EDA7_0/2/0_7.jpg?v=1717582746484" as="image"/>
+	<link rel="preload" href="media/panorama_EC17A84C_E7C1_1323_41EB_2D1EEBF6EDA7_0/2/0_8.jpg?v=1717582746484" as="image"/>
+	<link rel="preload" href="media/panorama_EC17A84C_E7C1_1323_41EB_2D1EEBF6EDA7_0/2/0_9.jpg?v=1717582746484" as="image"/>
+	<link rel="preload" href="media/panorama_EC17A84C_E7C1_1323_41EB_2D1EEBF6EDA7_0/2/0_10.jpg?v=1717582746484" as="image"/>
+	<link rel="preload" href="media/panorama_EC17A84C_E7C1_1323_41EB_2D1EEBF6EDA7_0/2/0_11.jpg?v=1717582746484" as="image"/>
 	<meta name="description" content="Virtual Tour"/>
 	<meta name="theme-color" content="#FFFFFF"/>
-    <script src="lib/tdvplayer.js?v=1717581307663"></script>
-    <script src="script.js?v=1717581307663"></script>
+    <script src="lib/tdvplayer.js?v=1717582746484"></script>
+    <script src="script.js?v=1717582746484"></script>
     <script type="text/javascript">
         var tour;
-        var devicesUrl = {"general":"script_general.js?v=1717581307663"};
+        var devicesUrl = {"general":"script_general.js?v=1717582746484"};
 
         (function()
         {
@@ -69,9 +69,9 @@
 
             var settings = new TDV.PlayerSettings();
             settings.set(TDV.PlayerSettings.CONTAINER, document.getElementById('viewer'));
-            settings.set(TDV.PlayerSettings.WEBVR_POLYFILL_URL, 'lib/WebVRPolyfill.js?v=1717581307663');
-            settings.set(TDV.PlayerSettings.HLS_URL, 'lib/Hls.js?v=1717581307663');
-            settings.set(TDV.PlayerSettings.QUERY_STRING_PARAMETERS, 'v=1717581307663');
+            settings.set(TDV.PlayerSettings.WEBVR_POLYFILL_URL, 'lib/WebVRPolyfill.js?v=1717582746484');
+            settings.set(TDV.PlayerSettings.HLS_URL, 'lib/Hls.js?v=1717582746484');
+            settings.set(TDV.PlayerSettings.QUERY_STRING_PARAMETERS, 'v=1717582746484');
 
             tour = new TDV.Tour(settings, devicesUrl);
             tour.bind(TDV.Tour.EVENT_TOUR_INITIALIZED, onVirtualTourInit);
